# webslam

./: .gitignore  CMakeLists.txt  README.md  build.sh  serve-https.mjs  serve-phone.sh
.claude/: launch.json
.github/workflows/: deploy.yml
docs/: BUILD-LOG.md  DEPTH-SCOPE.md  OPTIMIZATION.md  VIO-SCOPE.md
docs/bench/: baseline-orbit.md  coast-through-hold.md  coverage-retention.md  map-budget-sweep.md  pan-map-poisoning.md  seeded-reloc.md  sphere-orbit-failure.md  xfeat-reloc.md
src/: ba.cpp  ba.h  bindings.cpp  fast_features.h  imu_preint.cpp  imu_preint.h  map.cpp  map.h  orb.cpp  orb.h  pnp.cpp  pnp.h  scale.cpp  scale.h  slam_engine.cpp  slam_engine.h  two_view.cpp  two_view.h  vi_init.cpp  vi_init.h  vi_optimizer.cpp  vi_optimizer.h  vi_window.cpp  vi_window.h
test/: run.sh  test_ba.cpp  test_explore.cpp  test_imu_preint.cpp  test_map.cpp  test_native.cpp  test_orb.cpp  test_pnp.cpp  test_reloc.cpp  test_scale.cpp  test_track_gyro.cpp  test_two_view.cpp  test_vi_init.cpp  test_vi_opt.cpp  test_vi_window.cpp  test_wasm.mjs
web/: depth-worker.js  feat-worker.js  imu.html  imu.js  index.html  main.js  version.js
web/models/: xfeat_320x256.onnx
web/wasm/: slam.js  slam.wasm
